My First Commit!

--- a/index.html
+++ b/index.html
@@ -11,18 +11,7 @@
     <div class="portofolio">
         <header>
             <nav>
-                <svg
-            class="menu"
-            width="43"
-            height="23"
-            viewBox="0 0 43 23"
-            fill="none"
-            xmlns="http://www.w3.org/2000/svg"
-          >
-            <line y1="1.5" x2="43" y2="1.5" stroke="white" stroke-width="3" />
-            <line y1="11.5" x2="28" y2="11.5" stroke="white" stroke-width="3" />
-            <line y1="21.5" x2="16" y2="21.5" stroke="white" stroke-width="3" />
-          </svg>
+               <h4 class=menu>menü</h4>
                 <div class="nav-open">
                     <div class="contact">
                         <h3>contact</h3>
@@ -51,8 +40,8 @@
                         <h2>Videographer, Editor, DOP</h2>
                     </div>
                     <div class="hero">
-                        <img class="first-pic-left" src="/marius-left-1.png" alt="first picture">
-                        <img class="first-pic-right" src="/marius-right-1.png" alt="first picture">
+                        <img class="first-pic-left" src="marius-left-1.png" alt="first picture">
+                        <img class="first-pic-right" src="marius-right-1.png" alt="first picture">
                     </div>
                 </section>
                 <section class="page chef">
@@ -61,8 +50,8 @@
                         <h2>Videographer, Editor, DOP</h2>
                     </div>
                     <div class="hero">
-                        <img class="first-pic-left" src="/marius2-left.png" alt="first picture">
-                        <img class="first-pic-right" src="/marius2-right.png" alt="first picture">
+                        <img class="first-pic-left" src="marius2-left.png" alt="first picture">
+                        <img class="first-pic-right" src="marius2-right.png" alt="first picture">
                     </div>
                 </section>
                 <div class="pages">
