my seconnd commit

--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
                         <h2>Videographer, Editor, DOP</h2>
                     </div>
                     <div class="hero">
-                        <img class="first-pic-left" src="marius-left-1.png" alt="first picture">
-                        <img class="first-pic-right" src="marius-right-1.png" alt="first picture">
+                        <img class="first-pic-left" src="marius-left-1.PNG" alt="first picture">
+                        <img class="first-pic-right" src="marius-right-1.PNG" alt="first picture">
                     </div>
                 </section>
                 <section class="page chef">
@@ -50,15 +50,15 @@
                         <h2>Videographer, Editor, DOP</h2>
                     </div>
                     <div class="hero">
-                        <img class="first-pic-left" src="marius2-left.png" alt="first picture">
-                        <img class="first-pic-right" src="marius2-right.png" alt="first picture">
+                        <img class="first-pic-left" src="marius2-left.PNG" alt="first picture">
+                        <img class="first-pic-right" src="marius2-right.PNG" alt="first picture">
                     </div>
                 </section>
                 <div class="pages">
                     <div class="page-1">
                         <svg class="slide active"
-                            width="12" 
-                            height="12" 
+                            width="12"
+                            height="12"
                             viewBox="0 0 12 12"
                             fill="none"
                             xmlns="http://www.w3.org/2000/svg"
@@ -68,8 +68,8 @@
                     </div>
                     <div class="page-2">
                         <svg class="slide"
-                            width="12" 
-                            height="12" 
+                            width="12"
+                            height="12"
                             viewBox="0 0 12 12"
                             fill="none"
                             xmlns="http://www.w3.org/2000/svg"
